# pec4

./: LICENSE  README.md  pyproject.toml  requeriments.txt  setup.py  testing_pec4.py
covid_approval_checker/: .coverage  functions.py
covid_approval_checker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
covid_approval_checker/htmlcov/: index.html  status.json  tests_TestFunctions_py.html
covid_approval_checker/tests/: TestFunctions.py  pollster_ratings.xlsx
src/: space_mission_data.csv
